feat: implement automatic asset management system with scan and config update scripts
- Add comprehensive asset upload guide to README.md
- Add new 'blush' category to face parts
- Restructure assets into organized subfolders (body, face, hair, accessories)
- Implement automatic asset discovery with scan-assets script
- Add config update script to sync manifest with static config
- Create combined update-assets script for one-command workflow
- Add glasses and earring assets with proper layering
- Update character configuration to support all new parts
- Add dynamic asset loading system (fallback to static config)
- Improve asset organization and naming conventions

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "scan-assets": "node scripts/update-asset-manifest.js",
+    "update-config": "node scripts/update-static-config.js",
+    "update-assets": "node scripts/update-assets.js"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
