feat: implement GitHub CDN for all assets
- Add CDN URL generation script (generate-cdn-urls.js)
- Update all asset paths to use GitHub CDN URLs
- Create CDN manifest for asset tracking
- Add setup-cdn script command
- All assets now served via https://raw.githubusercontent.com/
- Improve asset loading performance and reliability
- Enable cross-origin asset access

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "scan-assets": "node scripts/update-asset-manifest.js",
     "update-config": "node scripts/update-static-config.js",
-    "update-assets": "node scripts/update-assets.js"
+    "update-assets": "node scripts/update-assets.js",
+    "setup-cdn": "node scripts/generate-cdn-urls.js"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
