--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "scan-assets": "node scripts/update-asset-manifest.js",
     "update-config": "node scripts/update-static-config.js",
     "update-assets": "node scripts/update-assets.js",
-    "setup-cdn": "node scripts/generate-cdn-urls.js"
+    "setup-cdn": "node scripts/generate-cdn-urls.js",
+    "update-assets-cdn": "node scripts/update-assets-with-cdn.js"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
