feat: add comprehensive color variants system
- Add color variants automation script (add-color-variants.js)
- Create detailed COLOR_VARIANTS_GUIDE.md with step-by-step instructions
- Add npm script command for color variants
- Support for hair, body, clothes, eyes, mouth, and blush color variants
- Predefined color palettes for consistent styling
- Both file-based and programmatic color application methods
- Complete workflow from asset creation to CDN deployment

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "update-config": "node scripts/update-static-config.js",
     "update-assets": "node scripts/update-assets.js",
     "setup-cdn": "node scripts/generate-cdn-urls.js",
-    "update-assets-cdn": "node scripts/update-assets-with-cdn.js"
+    "update-assets-cdn": "node scripts/update-assets-with-cdn.js",
+    "add-color-variants": "node scripts/add-color-variants.js"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
