feat: integrate color variants into update-assets-cdn workflow
- Add color variants step to update-assets-with-cdn.js script
- Make color variants script more robust with error handling
- Add intelligent detection to avoid duplicate color variants
- Update package.json with new script command
- Add comprehensive script documentation to README
- Create complete workflow: scan → update → colors → CDN
- All asset management now handled in single command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "update-assets": "node scripts/update-assets.js",
     "setup-cdn": "node scripts/generate-cdn-urls.js",
     "update-assets-cdn": "node scripts/update-assets-with-cdn.js",
-    "add-color-variants": "node scripts/add-color-variants.js"
+    "add-color-variants": "node scripts/add-color-variants.js",
+    "update-assets-with-colors": "node scripts/update-assets-with-cdn.js"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
