--- a/package.json
+++ b/package.json
@@ -2,20 +2,18 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "scan": "node scripts/update-asset-manifest.js",
+    "config": "node scripts/update-static-config.js",
+    "update": "node scripts/update-assets.js",
     "cdn": "node scripts/generate-cdn-urls.js",
+    "assets": "node scripts/update-assets-with-cdn.js",
     "colors": "node scripts/add-color-variants.js",
-    "cleanup": "node scripts/cleanup-color-variants.js",
-    "fix": "node scripts/fix-color-variants.js",
-    "assets": "node scripts/update-asset-manifest.js",
-    "registry": "node scripts/generate-asset-registry.js"
+    "all": "node scripts/update-assets-with-cdn.js"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
