--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-08-24T15:24:23.965Z",
+  "generatedAt": "2025-08-24T15:52:17.550Z",
   "assets": [
     {
       "baseId": "earring-default",
@@ -126,7 +126,14 @@
       "subpart": "",
       "style": "light",
       "basePath": "/assets/character/face/blush/blush-light.png",
-      "variants": []
+      "variants": [
+        {
+          "id": "light-pink",
+          "name": "light (Pink)",
+          "path": "/assets/character/face/blush/blush-light-pink.png",
+          "color": "#F8BBD0"
+        }
+      ]
     },
     {
       "baseId": "blush-soft",
