--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-08-25T00:45:44.814Z",
+  "generatedAt": "2025-08-25T00:53:36.305Z",
   "assets": [
     {
       "baseId": "earring-circle",
@@ -572,26 +572,7 @@
       "subpart": "front",
       "style": "tomboy",
       "basePath": "/assets/character/hair/hair-front/hair-front-tomboy.png",
-      "variants": [
-        {
-          "id": "tomboy-black",
-          "name": "tomboy (Black)",
-          "path": "/assets/character/hair/hair-front/hair-front-tomboy-black.png",
-          "color": "#333333"
-        },
-        {
-          "id": "tomboy-blonde",
-          "name": "tomboy (Blonde)",
-          "path": "/assets/character/hair/hair-front/hair-front-tomboy-blonde.png",
-          "color": "#DAA520"
-        },
-        {
-          "id": "tomboy-brown",
-          "name": "tomboy (Brown)",
-          "path": "/assets/character/hair/hair-front/hair-front-tomboy-brown.png",
-          "color": "#8B4513"
-        }
-      ]
+      "variants": []
     }
   ]
 }
