--- a/public/assets/color-variants-manifest.json
+++ b/public/assets/color-variants-manifest.json
@@ -1,5 +1,5 @@
 {
-  "generatedAt": "2025-08-25T01:37:16.735Z",
+  "generatedAt": "2025-08-25T01:39:49.882Z",
   "assets": [
     {
       "baseId": "earring-circle",
@@ -565,6 +565,51 @@
       "style": "default",
       "basePath": "/assets/character/hair/hair-front/hair-front-default.png",
       "variants": []
+    },
+    {
+      "baseId": "hair-front-park",
+      "part": "hair",
+      "subpart": "front",
+      "style": "park",
+      "basePath": "/assets/character/hair/hair-front/hair-front-park.png",
+      "variants": [
+        {
+          "id": "park-blue",
+          "name": "park (Blue)",
+          "path": "/assets/character/hair/hair-front/hair-front-park-blue.png",
+          "color": "#90CAF9"
+        },
+        {
+          "id": "park-brown",
+          "name": "park (Brown)",
+          "path": "/assets/character/hair/hair-front/hair-front-park-brown.png",
+          "color": "#8B4513"
+        },
+        {
+          "id": "park-pink",
+          "name": "park (Pink)",
+          "path": "/assets/character/hair/hair-front/hair-front-park-pink.png",
+          "color": "#F8BBD0"
+        },
+        {
+          "id": "park-red",
+          "name": "park (Red)",
+          "path": "/assets/character/hair/hair-front/hair-front-park-red.png",
+          "color": "#FF8A80"
+        },
+        {
+          "id": "park-white",
+          "name": "park (White)",
+          "path": "/assets/character/hair/hair-front/hair-front-park-white.png",
+          "color": "#FAFAFA"
+        },
+        {
+          "id": "park-yellow",
+          "name": "park (Yellow)",
+          "path": "/assets/character/hair/hair-front/hair-front-park-yellow.png",
+          "color": "#FFF9C4"
+        }
+      ]
     },
     {
       "baseId": "hair-front-tomboy",
